# multimodel-ooc-detector

./: .env.example  .gitignore  README.md  demo_results.xlsx  pyproject.toml  requirements.txt  test_guide.md  verite_combined.csv
data/VERITE/: .crawl_failed.json  .vision_usage.json  check_data.py  pre_crawl.py  pre_crawl_evidence.py  prepare_verite_combined.py
data/VERITE/.crawl_cache/vision/: false_0.json  false_1.json  false_10.json  false_100.json  false_101.json  false_105.json  false_108.json  false_109.json  false_11.json  false_112.json  false_113.json  false_115.json  false_116.json  false_118.json  false_12.json  false_120.json  false_121.json  false_122.json  false_124.json  false_125.json  false_126.json  false_127.json  false_128.json  false_129.json  false_13.json  false_130.json  false_131.json  false_132.json  false_133.json  false_135.json  false_136.json  false_138.json  false_140.json  false_141.json  false_143.json  false_145.json  false_146.json  false_148.json  false_149.json  false_15.json  (+374 more)
notebooks/: 01_demo_pipeline.ipynb  02_demo_verite_newsclippings.py
src/: config.py  evidence_retriever.py  llm_provider.py
src/agents/: analyst_agent.py  detective_agent.py
src/agents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline.py  test_schemas.py
